# cryptic-ip-binding-sites

./: .bandit  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  README_DOCKER.md  TESTING.md  docker-compose.yml  environment.lock.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml  data-validation.yml  pr-ci.yml  tier1-validation.yml
config/defaults/: expected_validation.json  pipeline.yaml
config/schemas/: pipeline.schema.yaml
cryptic_ip/: __init__.py  cli.py  errors.py  pipeline.py  reproducibility.py
cryptic_ip/analysis/: __init__.py  analyzer.py  electrostatics.py  (+7 more)
docs/: API.md  BATCH_PROCESSING.md  BEST_PRACTICES.md  COLAB_FULL_PIPELINE.md  GETTING_STARTED.md  INSTALLATION.md  IP_VALIDATION_DATASET.md  METHODS.md  ML_MODEL.md  NOTEBOOK_06_ENHANCEMENTS.md  PERFORMANCE.md  PROJECT_OVERVIEW.md  PUBLICATION_FIGURES.md  PUBLICATION_PACKAGE.md  REPRODUCIBILITY.md  TROUBLESHOOTING.md  TUTORIAL.md  VALIDATION.md  WEB_APP_DEPLOYMENT.md
examples/: workflow_1_single_protein.py  workflow_2_train_ml_model.py  workflow_3_proteome_screen.py  workflow_4_md_validation.py
manuscript/: README.md  RESULTS_DRAFT.md
models/: README.md  cryptic_ip_classifier_v1.metadata.json  cryptic_ip_classifier_v1_model_card.md
notebooks/: 01_Quick_Start.ipynb  02_ADAR2_Analysis.ipynb  03_Proteome_Screening.ipynb  04_Validation_Analysis.ipynb  05_Results_Analysis.ipynb  06_Protein_Engineering_Pipeline.ipynb  Colab_Full_Pipeline_Run.ipynb  README.md  notebook_utils.py
scripts/: batch_screening_pipeline.py  build_ip_validation_dataset.py  characterize_candidates.py  check_alphafold_versions.py  colab_env.py  colab_install.sh  colab_run_all.py  complete_enhancement.py  enhance_notebook_06.py  export_supplementary_tables.py  figure_config_template.yaml  generate_publication_figures.py  nature_publication.mplstyle  phase1_validate_adar2.py  phase2_download_proteomes.py  phase3_screen_proteome.py  phase5_comparative_analysis.py  profile_pipeline.py  reproducibility_workflow.py  retrain_ml_classifier_if_needed.py  run_md_pilot_validation.py  run_publication_package.py  run_yeast_pilot_screen.py  train_ml_classifier.py  validate_pdb_entries.py  validate_structures.py
tests/: __init__.py  conftest.py  test_analyzer_residues.py  test_batch_processing.py  test_burial_depth.py  test_burial_metrics.py  test_characterize_candidates.py  test_colab_env.py  test_colab_run_all.py  test_comparative_analysis.py  test_control_scoring.py  test_database.py  test_database_clients.py  test_electrostatics.py  test_export_supplementary.py  test_filters.py  test_fpocket_parser.py  test_input_validation.py  test_md_validation.py  test_ml_classifier.py  test_pipeline.py  test_pocket_detection.py  test_publication_figures.py  test_publication_smoke.py  test_reproducibility.py  test_scoring.py  test_statistical_validation.py  test_structure_context.py  test_structure_validation.py  test_units.py  test_validation.py  test_validation_infrastructure.py  test_validation_suite_summary.py
(+86 files in other folders)
