[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptic-ip-binding-sites"
version = "0.1.0"
description = "Computational pipeline for identifying buried inositol phosphate binding sites"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tommaso R. Marena", email = "marena@cua.edu"}
]
maintainers = [
    {name = "Tommaso R. Marena", email = "marena@cua.edu"}
]
keywords = [
    "structural biology",
    "computational biology",
    "inositol phosphates",
    "protein structure",
    "AlphaFold",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "biopython>=1.79",
    "prody>=2.0",
    "requests>=2.26",
    "aiohttp>=3.8",
    "tqdm>=4.62",
    "pyyaml>=6.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-xdist>=2.5",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.10",
    "mypy>=0.950",
    "pre-commit>=2.20",
]

full = [
    "jupyter>=1.0",
    "notebook>=6.4",
    "ipywidgets>=7.6",
    "nbconvert>=6.4",
    "sphinx>=4.5",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
cryptic-ip = "cryptic_ip.cli:main"

[project.urls]
Homepage = "https://github.com/Tommaso-R-Marena/cryptic-ip-binding-sites"
Documentation = "https://github.com/Tommaso-R-Marena/cryptic-ip-binding-sites/tree/main/docs"
"Bug Tracker" = "https://github.com/Tommaso-R-Marena/cryptic-ip-binding-sites/issues"
"Source Code" = "https://github.com/Tommaso-R-Marena/cryptic-ip-binding-sites"

[tool.setuptools]
packages = ["cryptic_ip"]

[tool.setuptools.package-data]
cryptic_ip = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=cryptic_ip"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["cryptic_ip"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
